bk_ida/gccida/c3/in_text_section
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/in_text_section/src/varasm.c:760:8: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
return in_section_0 == in_text; 
       ^~~~~~~~~~~~
       in_section
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/in_text_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/in_text_section/src/obj/varasm.o] Error 1
